clean the GitHub

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,12 +1,33 @@
 MyAR Adobe Air Native Extension
 
+*Aug 09, 2017 - V7.0.0-0.0.0*
+* rebuilt the ANE from scratch with Wikitude SDK 7.0.0 including Android+iOS support.
 
-2014		>> V1.0: 	beginning of the journey supporting Android only!
-2014 		>> V1.6		added support for iOS 32-bit
-2014		>> V2.0:	This version was never release and we shifted the extension core to be based on MetaioSDK
-Mar 15, 2015 	>> V3.0: 	supporting AREL based on MetaioSDK V6.0.2 with android and iOS 64-bit
-Apr 15, 2015 	>> V3.1: 	added support for location based billboards in AREL
-May 14, 2015 	>> V3.2: 	fixed ANE conflicts with other ANEs must add commonDependencies.ane to your project https://github.com/myflashlab/common-dependencies-ANE
+*Sep 07, 2015 - V5.0.0*
+* Added Wikitude SDK for Android
 
-Jun 01, 2015	>> V4.0:	This version was never release because apple bought Metaio! and we shifted the extension core to be based on Wikitude
-Sep 07, 2015	>> V5.0 beta:	Added Wikitude SDK for Android
+*Jun 01, 2015 - V4.0.0*
+* This version was never release because apple bought Metaio! and we shifted the extension core to be based on Wikitude
+
+*May 14, 2015 - V3.2.0*
+* fixed ANE conflicts with other ANEs must add commonDependencies.ane to your project https://github.com/myflashlab/common-dependencies-ANE
+
+*Apr 15, 2015 - V3.1.0*
+* added support for location based billboards in AREL
+
+*Mar 15, 2015 - V3.0.0*
+* supporting AREL based on MetaioSDK V6.0.2 with android and iOS 64-bit
+
+*Dec 15, 2014 - V2.0.0*
+* This version was never release and we shifted the extension core to be based on MetaioSDK
+
+*Apr 23, 2014 - V1.6.0*
+* Added support for iOS 32-bit
+
+*Feb 05, 2014 - V1.0.0*
+* beginning of the journey supporting Android only
+
+
+
+
+
