--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,37 +1,48 @@
 MyAR Adobe Air Native Extension
 
+*Aug 22, 2017 - V7.0.0-0.0.2*
+
+* Added support for JS/AIR and vice versa communication. listen to ```ArEvents.JS_TALK``` for messages from JS and use ```AR.callJS("")``` to call functions on the JS side.
+* The first sample, **01_ImageTracking_1_ImageOnTarget** shows how you can have a close button on the JS side to close the AR window when clicked.
+
+
 *Aug 17, 2017 - V7.0.0-0.0.1*
+
 * Fixed blackscreen problem.
 * Added calibration listeners. ```ArEvents.CALIBRATION_NEEDED```, ```ArEvents.CALIBRATION_DONE```.
 
 *Aug 09, 2017 - V7.0.0-0.0.0*
-* rebuilt the ANE from scratch with Wikitude SDK 7.0.0 including Android+iOS support.
+
+* Rebuilt the ANE from scratch with Wikitude SDK 7.0.0 including Android+iOS support.
 
 *Sep 07, 2015 - V5.0.0*
+
 * Added Wikitude SDK for Android
 
 *Jun 01, 2015 - V4.0.0*
+
 * This version was never release because apple bought Metaio! and we shifted the extension core to be based on Wikitude
 
 *May 14, 2015 - V3.2.0*
+
 * fixed ANE conflicts with other ANEs must add commonDependencies.ane to your project https://github.com/myflashlab/common-dependencies-ANE
 
 *Apr 15, 2015 - V3.1.0*
+
 * added support for location based billboards in AREL
 
 *Mar 15, 2015 - V3.0.0*
+
 * supporting AREL based on MetaioSDK V6.0.2 with android and iOS 64-bit
 
 *Dec 15, 2014 - V2.0.0*
+
 * This version was never release and we shifted the extension core to be based on MetaioSDK
 
 *Apr 23, 2014 - V1.6.0*
+
 * Added support for iOS 32-bit
 
 *Feb 05, 2014 - V1.0.0*
+
 * beginning of the journey supporting Android only
-
-
-
-
-
