--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,10 +1,14 @@
 MyAR Adobe Air Native Extension
 
+*Aug 26, 2017 - V7.0.0-1.0.0*
+
+* Added AR screenshot support
+* Added camera hardware settings
+
 *Aug 22, 2017 - V7.0.0-0.0.2*
 
 * Added support for JS/AIR and vice versa communication. listen to ```ArEvents.JS_TALK``` for messages from JS and use ```AR.callJS("")``` to call functions on the JS side.
 * The first sample, **01_ImageTracking_1_ImageOnTarget** shows how you can have a close button on the JS side to close the AR window when clicked.
-
 
 *Aug 17, 2017 - V7.0.0-0.0.1*
 
